--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -2,3 +2,6 @@
     ldaphost: ldap.example.com
     customerou: ou=customer1,dc=example,dc=com
     disable_antivirus: false
+    enable_antivirus: false
+    add_ldapacl: false
+    remove_ldapacl: false
