--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -1,22 +1,44 @@
 ---
     - name: prepare squid config file
       template: src=templates/squid.conf.j2 dest=/etc/squid/squid.conf owner=root group=squid mode=0644
+      notify: 
+      - restart_squid
 
     - name: configure /etc/squid/conf.d directory
       file: path=/etc/squid/conf.d state=directory mode=0755 owner=root group=squid
+      notify: 
+      - restart_squid
 
     - name: configure /etc/squid/lists directory
       file: path=/etc/squid/lists state=directory mode=0755 owner=root group=squid
+      notify: 
+      - restart_squid
 
     - name: configure c-icap integration
       copy: src=files/99.c-icap-integration.conf dest=/etc/squid/conf.d/99.c-icap-integration.conf owner=root group=squid mode=0644
+      when: enable_antivirus
+      notify: 
+      - restart_squid
 
     - name: disable c-icap integration
       file: path=/etc/squid/conf.d/99.c-icap-integration.conf state=absent
       when: disable_antivirus
+      notify: 
+      - restart_squid
 
     - name: configure ldapacl file
-      copy: dest=/etc/squid/conf.d/10.ldapacl.conf src=files/10.ldapacl.conf owner=root group=squid mode=0644
+      copy: dest=/etc/squid/conf.d/10.ldapacl.conf src=files/{{ uuid_file_name }} owner=root group=squid mode=0644
+      when: add_ldapacl
+      notify: 
+      - restart_squid
+      tags:
+      - update_ldap_acl
+
+    - name: remove ldapacl file 
+      file: path=/etc/squid/conf.d/10.ldapacl.conf state=absent
+      when: remove_ldapacl
+      notify:
+      - restart_squid 
 
 #    - name: configure list files
 #      copy: dest=/etc/squid/lists/{{ item }} src=files/{{ item }}
@@ -24,10 +46,12 @@
 #        - list1.list
 #        - list2.list
 #
-    - name: configure list files
-      copy: src={{ item }} dest=/etc/squid/lists/  owner=root group=squid mode=0644
-      with_fileglob:
-        - files/*.list
+#    - name: configure list files
+#      copy: src={{ item }} dest=/etc/squid/lists/  owner=root group=squid mode=0644
+#      with_fileglob:
+#        - files/{{ uuid_name }}
+#      notify: 
+#      - restart_squid
 
     - name: disable dansguardian
       shell:  chkconfig dansguardian off
@@ -35,5 +59,5 @@
     - name: disable dansguardian
       shell: service dansguardian stop
 
-    - name: restarting squid
-      service: name=squid state=restarted enabled=yes
+#    - name: restarting squid
+#      service: name=squid state=restarted enabled=yes
