--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -12,3 +12,50 @@
     # by default it contains an image saved internally
     url_error_img: /squid-internal-static/icons/SN.png
     url_error_img_default: /squid-internal-static/icons/SN.png
+
+
+    # List here the customized error pages that to be copied in a tager host
+    error_pages_files:
+      - ERR_ACCESS_DENIED
+      - ERR_ACL_TIME_QUOTA_EXCEEDED
+      - ERR_AGENT_CONFIGURE
+      - ERR_AGENT_WPAD
+      - ERR_CACHE_ACCESS_DENIED
+      - ERR_CACHE_MGR_ACCESS_DENIED
+      - ERR_CANNOT_FORWARD
+      - ERR_CONFLICT_HOST
+      - ERR_CONNECT_FAIL
+      - ERR_DIR_LISTING
+      - ERR_DNS_FAIL
+      - ERR_ESI
+      - ERR_FORWARDING_DENIED
+      - ERR_FTP_DISABLED
+      - ERR_FTP_FAILURE
+      - ERR_FTP_FORBIDDEN
+      - ERR_FTP_NOT_FOUND
+      - ERR_FTP_PUT_CREATED
+      - ERR_FTP_PUT_ERROR
+      - ERR_FTP_PUT_MODIFIED
+      - ERR_FTP_UNAVAILABLE
+      - ERR_GATEWAY_FAILURE
+      - ERR_ICAP_FAILURE
+      - ERR_INVALID_REQ
+      - ERR_INVALID_RESP
+      - ERR_INVALID_URL
+      - ERR_LIFETIME_EXP
+      - ERR_NO_RELAY
+      - ERR_ONLY_IF_CACHED_MISS
+      - error-details.txt
+      - ERR_PRECONDITION_FAILED
+      - ERR_READ_ERROR
+      - ERR_READ_TIMEOUT
+      - ERR_SECURE_CONNECT_FAIL
+      - ERR_SHUTTING_DOWN
+      - ERR_SOCKET_FAILURE
+      - ERR_TOO_BIG
+      - ERR_UNSUP_HTTPVERSION
+      - ERR_UNSUP_REQ
+      - ERR_URN_RESOLVE
+      - ERR_WRITE_ERROR
+      - ERR_ZERO_SIZE_OBJECT
+    
